--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
       href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@400;700&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="./Assets/CSS/style.css" />
     <title>Work Day Scheduler</title>
   </head>
 
   <body>
-    <header class="p-5 mb-4">
+    <header class="p-5 mb-4 ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
@@ -141,7 +141,7 @@
   // .dialog(); only availabe with jquery UI what it does it takes the element and makes it a dialog. 
   // -->
 </script>
-    <script src="script.js"></script>
+    <script src="./Assets/JavaScript/script.js"></script>
   </body>
 </html>
 
