color comparing with time works

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </head>
 
   <body>
+    <!-- NEED TO FIX HEADER SO IT CENTERS!!!!!!!!!!!!!!!!!!!!!!!! -->
     <header class="p-5 mb-4 ">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
@@ -131,29 +132,9 @@
     <script src="https://cdn.jsdelivr.net/npm/dayjs@1.11.3/dayjs.min.js"
     integrity="sha256-iu/zLUB+QgISXBLCW/mcDi/rnf4m4uEDO0wauy76x7U="
     crossorigin="anonymous"></script>
-<!-- OUR OWN CUSTOME JAVASCRIPT-->
-<!-- example:  -->
-<!-- <script>
-  $(function() {
-    $('#dialog').dialog();
-  }); -->
-  <!-- // #21 CLASS EXAMPLE: the ('#dialog') is grabbing the dialog element by ID.
-  // .dialog(); only availabe with jquery UI what it does it takes the element and makes it a dialog. 
-  // -->
 </script>
     <script src="./Assets/JavaScript/script.js"></script>
   </body>
 </html>
 
 
-
-
-
-
-
-
-
-
-  <!-- UPDATE THE JQUERY LIBRARY TO 3.5.1 -->
-  <!-- <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script> -->
-<!--  -->
