--- a/index.html
+++ b/index.html
@@ -25,18 +25,13 @@
   </head>
 
   <body>
-    <!-- NEED TO FIX HEADER SO IT CENTERS!!!!!!!!!!!!!!!!!!!!!!!! -->
-    <header class="p-5 mb-4 ">
+    <header class="p-5 mb-4 d-flex align-items-center">
       <h1 class="display-3">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
 
     <div class="container-fluid px-5">
-    
-        <!-- 24 hour format 12,13,14,15,16  --> 
-        <!-- if id = 9 is gonna be green... -->
-
         <!-- HOUR 9AM -->
         <div id="9" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">9AM</div>
@@ -45,7 +40,6 @@
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
         </div>
-
 
         <!-- HOUR 10AM -->
         <div id="10" class="row time-block">
@@ -56,7 +50,6 @@
           </button>
         </div>
 
-
         <!-- HOUR 11AM -->
         <div id="11" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">11AM</div>
@@ -65,7 +58,6 @@
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
         </div>
-
 
         <!-- HOUR 12PM -->
         <div id="12" class="row time-block">
@@ -76,7 +68,6 @@
           </button>
         </div>
 
-
         <!-- HOUR 1PM -->
         <div id="13" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">1PM</div>
@@ -85,7 +76,6 @@
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
         </div>
-
 
         <!-- HOUR 2PM -->
         <div id="14" class="row time-block">
@@ -96,7 +86,6 @@
           </button>
         </div>
 
-
         <!-- HOUR 3PM -->
         <div id="15" class="row time-block">
           <div class="col-2 col-md-1 hour text-center py-3">3PM</div>
@@ -105,7 +94,6 @@
             <i class="fas fa-save" aria-hidden="true"></i>
           </button>
         </div>
-
 
         <!-- HOUR 4PM -->
       <div id="16" class="row time-block">
@@ -116,7 +104,6 @@
         </button>
       </div>
 
-
         <!-- HOUR 5PM -->
       <div id="17" class="row time-block">
         <div class="col-2 col-md-1 hour text-center py-3">5PM</div>
@@ -125,6 +112,7 @@
           <i class="fas fa-save" aria-hidden="true"></i>
         </button>
       </div>
+    </div>
 
 
   
