--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
   </head>
 
   <body>
-    <header class="p-5 mb-4 d-flex align-items-center">
-      <h1 class="display-3">Work Day Scheduler</h1>
+    <header class="p-5 mb-2 d-flex align-items-center bg-dark text-white">
+      <h1 class="display-3 ">Work Day Scheduler</h1>
       <p class="lead">A simple calendar app for scheduling your work day</p>
       <p id="currentDay" class="lead"></p>
     </header>
